src/snapshots/lambda3__cst__tests__parse_expr_test@missing_arrow.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/expr/missing_arrow.l3
---
(
    "(\\x  x x) (\\y -> y)",
    [
        "expected \'->\', got Ident",
        "unexpected token Ident, expected \')\'",
    ],
    Root@0..19
      ApplicationE@0..19
        ParenE@0..9
          LParen@0..1 "("
          LambdaE@1..3
            Backslash@1..2 "\\"
            VarP@2..3
              Ident@2..3 "x"
          Error@3..8
            Whitespace@3..4 " "
            Whitespace@4..5 " "
            Ident@5..6 "x"
            Whitespace@6..7 " "
            Ident@7..8 "x"
          RParen@8..9 ")"
        ParenE@9..19
          Whitespace@9..10 " "
          LParen@10..11 "("
          LambdaE@11..18
            Backslash@11..12 "\\"
            VarP@12..13
              Ident@12..13 "y"
            Whitespace@13..14 " "
            Arrow@14..16 "->"
            VarE@16..18
              Whitespace@16..17 " "
              Ident@17..18 "y"
          RParen@18..19 ")"
    ,
)
