src/snapshots/lambda3__cst__tests__parse_expr_test@missing_binder.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/expr/missing_binder.l3
---
(
    "(\\. x)",
    [
        "expected binder, got Dot",
    ],
    Root@0..6
      ParenE@0..6
        LParen@0..1 "("
        LambdaE@1..5
          Backslash@1..2 "\\"
          Error@2..2
          Dot@2..3 "."
          VarE@3..5
            Whitespace@3..4 " "
            Ident@4..5 "x"
        RParen@5..6 ")"
    ,
)
