src/snapshots/lambda3__cst__tests__parse_expr_test@simple.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/expr/simple.l3
---
(
    "(\\x -> x)",
    [],
    Root@0..9
      ParenE@0..9
        LParen@0..1 "("
        LambdaE@1..8
          Backslash@1..2 "\\"
          VarP@2..3
            Ident@2..3 "x"
          Whitespace@3..4 " "
          Arrow@4..6 "->"
          VarE@6..8
            Whitespace@6..7 " "
            Ident@7..8 "x"
        RParen@8..9 ")"
    ,
)
