src/snapshots/lambda3__cst__tests__parse_expr_test@simple_application.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/expr/simple_application.l3
---
(
    "x x",
    [],
    Root@0..3
      ApplicationE@0..3
        VarE@0..1
          Ident@0..1 "x"
        VarE@1..3
          Whitespace@1..2 " "
          Ident@2..3 "x"
    ,
)
