src/snapshots/lambda3__cst__tests__parse_expr_test@simple_number_literal.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/expr/simple_number_literal.l3
---
(
    "\\x -> 42",
    [],
    Root@0..8
      LambdaE@0..8
        Backslash@0..1 "\\"
        VarP@1..2
          Ident@1..2 "x"
        Whitespace@2..3 " "
        Arrow@3..5 "->"
        LiteralE@5..8
          Whitespace@5..6 " "
          NumberLit@6..8 "42"
    ,
)
