src/snapshots/lambda3__cst__tests__parse_patterns_test@annotation.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/patterns/annotation.l3
---
(
    "_ : Int -> Int",
    [],
    Root@0..14
      AnnotationP@0..14
        WildcardP@0..1
          Underscore@0..1 "_"
        Whitespace@1..2 " "
        Colon@2..3 ":"
        FuncTy@3..14
          IntTy@3..7
            Whitespace@3..4 " "
            Int@4..7 "Int"
          Whitespace@7..8 " "
          Arrow@8..10 "->"
          IntTy@10..14
            Whitespace@10..11 " "
            Int@11..14 "Int"
    ,
)
