src/snapshots/lambda3__cst__tests__parse_patterns_test@kitchen_sink.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/patterns/kitchen_sink.l3
---
(
    "(((a) : Int -> Int) : Int)",
    [],
    Root@0..26
      ParenP@0..26
        LParen@0..1 "("
        AnnotationP@1..25
          ParenP@1..19
            LParen@1..2 "("
            AnnotationP@2..18
              ParenP@2..5
                LParen@2..3 "("
                VarP@3..4
                  Ident@3..4 "a"
                RParen@4..5 ")"
              Whitespace@5..6 " "
              Colon@6..7 ":"
              FuncTy@7..18
                IntTy@7..11
                  Whitespace@7..8 " "
                  Int@8..11 "Int"
                Whitespace@11..12 " "
                Arrow@12..14 "->"
                IntTy@14..18
                  Whitespace@14..15 " "
                  Int@15..18 "Int"
            RParen@18..19 ")"
          Whitespace@19..20 " "
          Colon@20..21 ":"
          IntTy@21..25
            Whitespace@21..22 " "
            Int@22..25 "Int"
        RParen@25..26 ")"
    ,
)
