src/snapshots/lambda3__cst__tests__parse_patterns_test@paren.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/patterns/paren.l3
---
(
    "(_)",
    [],
    Root@0..3
      ParenP@0..3
        LParen@0..1 "("
        WildcardP@1..2
          Underscore@1..2 "_"
        RParen@2..3 ")"
    ,
)
