src/snapshots/lambda3__cst__tests__parse_patterns_test@var.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/patterns/var.l3
---
(
    "x",
    [],
    Root@0..1
      VarP@0..1
        Ident@0..1 "x"
    ,
)
